--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,12 +7,15 @@
         <div>
             <h1><a href="/">Django Girls Blog</a></h1>
         </div>
-        {% for post in posts %}
         <div>
-            <p>published: {{ post.published_date }}</p>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
+
+            {% for post in posts %}
+            <div>
+                <p>published by: {{ post.author }}</p>
+                <h2><a href="">{{ post.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </body>
 </html>
